# shapes_lib

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  build.ps1  build_dll.ps1  old_CMakeLists.txt
projects/shapes/: CMakeLists.txt
projects/shapes/include/shapes/: Point.h
projects/shapes/include/shapes/core/: BasePoint.h
projects/shapes/src/: Point.cpp
projects/shapes/src/core/: BasePoint.cpp
projects/shapes/test/src/: PointTest.cpp  main.cpp
projects/shapes_common/: CMakeLists.txt
projects/shapes_common/include/shapes_common/: utils.h
shapes/: CMakeLists.txt
shapes/src/: Point.cpp  utils.h
src/: main.cpp
test/: CMakeLists.txt
test/src/: PointTest.cpp
test_app/src/: main.cpp
